Fixed the color contrast of select placeholders on home and anchor tags on issues page

--- a/src/styles/issues.scss
+++ b/src/styles/issues.scss
@@ -74,6 +74,9 @@
       font-size: 0.9em;
       letter-spacing: 0.3px;
       line-height: 16px;
+      a {
+        color: #164CCB;
+      }
       code {
         color: #595959;
         font-size: 0.9em;
